--- a/views/About.html
+++ b/views/About.html
@@ -10,8 +10,11 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Wix+Madefor+Display:wght@400..800&family=Wix+Madefor+Text:ital,wght@0,400..800;1,400..800&display=swap"
         rel="stylesheet">
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+    
     <style>
-        @import url(../node_modules/bootstrap/dist/css/bootstrap.css);
+        /* @import url(../node_modules/bootstrap/dist/css/bootstrap.css); */
 
         @import url(../public/CSS/reast.css);
         @import url(../public/CSS/animation.css);
@@ -312,7 +315,7 @@
     </div>
     <script src="../public/JS/About.js"></script>
     <script src="../public/JS/Navbar.js"></script>
-    <script src="../public/Js/animation.js"></script>
+    <script src="../public/JS/animation.js"></script>
 </body>
 
 </html>
