--- a/views/Careers.html
+++ b/views/Careers.html
@@ -10,8 +10,10 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Wix+Madefor+Display:wght@400..800&family=Wix+Madefor+Text:ital,wght@0,400..800;1,400..800&display=swap"
         rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+
     <style>
-        @import url(../node_modules/bootstrap/dist/css/bootstrap.css);
+        /* @import url(../node_modules/bootstrap/dist/css/bootstrap.css); */
 
         @import url(../public/CSS/reast.css);
         @import url(../public/CSS/animation.css);
@@ -360,9 +362,10 @@
     </div>
     <!-- <script src="../public/JS/TripoGames.js"></script> -->
     <script src="../public/JS/Navbar.js"></script>
-    <script src="../public/Js/animation.js"></script>
+    <script src="../public/JS/animation.js"></script>
     <script src="../public/JS/ApplyNow_form.js"></script>
-    <script src="../node_modules/fontawesome-free-6.6.0-web/js/all.js"></script>
+    <!-- <script src="../node_modules/fontawesome-free-6.6.0-web/js/all.js"></script> -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/js/all.min.js"></script>
 </body>
 
 </html>
