--- a/views/About.html
+++ b/views/About.html
@@ -31,14 +31,14 @@
                             color: #fff;
                             padding: 18px 22px;
                             font-size: 1.2rem;
-                            font-weight: 800;" href="./TripoGames.html">
+                            font-weight: 800;" href="../index.html">
                 Tripo Games
             </a>
         </div>
         <div style="margin-left: auto;" class="nav GameNavR justify-content-end">
             <nav>
                 <ul class="d-flex GameNavR__list">
-                    <li class="GameNavR__item "><a href="./TripoGames.html">Home</a></li>
+                    <li class="GameNavR__item "><a href="../index.html">Home</a></li>
 
                     <li class="GameNavR__item GameNavR__item--Dropdowns" style="font-size: 1.1rem;  ">
                         <a style="cursor: default;" href="#">Game</a>
@@ -50,7 +50,7 @@
                     </li>
                     <li class="GameNavR__item"><a href="./Careers.html">Careers</a></li>
                     <li class="GameNavR__item GameNavR__item--active"><a href="./About.html">About</a></li>
-                    <li class="GameNavR__item"><a href="./TripoGames.html#JoinTeam_form">Contact</a></li>
+                    <li class="GameNavR__item"><a href="../index.html#JoinTeam_form">Contact</a></li>
                 </ul>
             </nav>
         </div>
@@ -252,7 +252,7 @@
                                         color: #fff;
                                         padding: 18px 22px;
                                         font-size: 1.2rem;
-                                        font-weight: 800;" href="./TripoGames.html">
+                                        font-weight: 800;" href="../index.html">
                             Tripo Games
                         </a>
                     </div>
