--- a/views/Games_Kipon.html
+++ b/views/Games_Kipon.html
@@ -31,14 +31,14 @@
                             color: #fff;
                             padding: 18px 22px;
                             font-size: 1.2rem;
-                            font-weight: 800;" href="./TripoGames.html">
+                            font-weight: 800;" href="../index.html">
                 Tripo Games
             </a>
         </div>
         <div style="margin-left: auto;" class="nav GameNavR justify-content-end">
             <nav>
                 <ul class="d-flex GameNavR__list">
-                    <li class="GameNavR__item "><a href="./TripoGames.html">Home</a></li>
+                    <li class="GameNavR__item "><a href="../index.html">Home</a></li>
 
                     <li class="GameNavR__item GameNavR__item--active GameNavR__item--Dropdowns"
                         style="font-size: 1.1rem;  ">
@@ -51,7 +51,7 @@
                     </li>
                     <li class="GameNavR__item"><a href="./Careers.html">Careers</a></li>
                     <li class="GameNavR__item"><a href="./About.html">About</a></li>
-                    <li class="GameNavR__item"><a href="./TripoGames.html#JoinTeam_form">Contact</a></li>
+                    <li class="GameNavR__item"><a href="../index.html#JoinTeam_form">Contact</a></li>
                 </ul>
             </nav>
         </div>
@@ -216,7 +216,7 @@
                                         color: #fff;
                                         padding: 18px 22px;
                                         font-size: 1.2rem;
-                                        font-weight: 800;" href="./TripoGames.html">
+                                        font-weight: 800;" href="../index.html">
                             Tripo Games
                         </a>
                     </div>
